istiofiles/egress/Gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 15443
        name: tcp
        protocol: TCP
      hosts:
        - mysql.tcp.svc
