istiofiles/egress/ServiceEntry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql
spec:
  hosts:
    - mysql.tcp.svc
  addresses:
    - 192.168.122.1/32
  ports:
    - name: tcp
      number: 3306
      protocol: tcp
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 192.168.122.1
